--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,7 +5,7 @@
     <title>Register</title>
 </head>
 <body>
-<form action="#" th:action="@{/saveUser}" th:object="${user}" method="post">
+<form action="#" th:action="@{/registerUser}" th:object="${user}" method="post">
     <table border="1">
         <tr>
             <td><label th:text="'User Name: '" /></td>
