--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -25,7 +25,7 @@
         </tr>
         <tr>
             <td><label th:text="'Phone: '" /></td>
-            <td><input type="number" th:field="*{userPhone}" /></td>
+            <td><input type="text" th:field="*{userPhone}" /></td>
         </tr>
         <tr>
             <td><input type="submit" value="Submit" /></td>
