added html files: confirmationLogin and confirmRegistration, added image for homepage, updated UserController

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,10 +7,10 @@
     <title>Title</title>
 </head>
 <body>
-<div class="myClass">Hello, sportivi!</div>
+<div class="myClass">Hello, players!</div>
+<img src="src/main/resources/images/home.png" alt="home icon" style="width:128px;height:128px;">
 
 <h2 class="hello-title" th:text="'Hello, ' + ${name} + '!'"></h2>
-
 <table style="border: 1px solid red">
     <tbody>
     <tr th:each="user: ${myUsersList}">
