--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,24 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
-
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
-    <link th:href="@{/styles/styles.css}" rel="stylesheet" />
-    <title> Generic Error</title>
+    <title>SportParkBooking - Generic error</title>
 </head>
 <body>
 Generic Error
-
-<!-- 404 Page not found
-We're sorry, the page you requested could not be found.
-Please go back to the homepage or contact us at support@sportpark.com
-
-
-400 Bad Request
-
-500 - Internal server error.
-There is a problem with the resource you are looking for and it cannot be displayed.-->
 </body>
 </html>
-
-
