--- a/src/main/resources/templates/confirmRegistration.html
+++ b/src/main/resources/templates/confirmRegistration.html
@@ -1,17 +1,25 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
 
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <link th:href="@{/styles/styles.css}" rel="stylesheet" />
-    <title>Title</title>
-</head>
-<body>
-<img src="src/main/resources/images/home.png" alt="home icon" style="width:128px;height:128px;">
-<h2 class="confirmRegister-title" th:text="'Welcome, your registration is successful, '+ ${name} + '!'"></h2>
+    <head>
+        <link href="../styles/styles.css" th:href="@{/styles/styles.css}" rel="stylesheet" />
+        <title>SportParkBooking - ConfirmRegistration</title>
+    </head>
+    <body>
+        <ul>
+            <li><a  href="/templates/home.html"     th:href="@{/home}"> Home</a></li>
+            <li><a  href="/templates/booking2.html" th:href="@{/booking}"> Booking</a></li>
+            <li><a  href="/templates/login.html"    th:href="@{/login}"> Login</a></li>
+            <li><a  href="/templates/register.html" th:href="@{/register}"> Register</a></li>
+            <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
+            <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
+            <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
+        </ul>
+        <h2 class="confirmRegister-title" th:text="'Welcome, your registration is successful, '+ ${name} + '!'"></h2>
 
+        <img src="/images/home.jpg"
+             th:attr="src=@{/images/home.jpg},title=#{SportParkBooking},alt=#{SportParkBooking}" />
 
-
-</body>
+    </body>
 </html>
