--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,10 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>SportParkBooking - Generic error</title>
 </head>
 <body>
-Generic Error
+<h2 class="error-title" th:text="'Oops! Sorry, this page is not found.'"></h2>
+<h2 class="error-title" th:text="'Not to worry, you can head back to our home page to find what you are looking for.'"></h2>
+<img src="/images/register.jpg"
+     th:attr="src=@{/images/error.jpg},title=#{ErrorPage},alt=#{ErrorPage}" />
 </body>
 </html>
