select Booking + confirm Booking (partial)

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,7 +21,7 @@
             <table border="1">
                 <tr>
                     <td>Email:</td>
-                    <td><input type="text" th:field="*{userEmail}" /></td>
+                    <td><input type="email" th:field="*{userEmail}" /></td>
                 </tr>
                 <tr>
                     <td>Password:</td>
