--- a/src/main/resources/static/styles/styles.css
+++ b/src/main/resources/static/styles/styles.css
@@ -33,3 +33,68 @@ li a:hover {
       color: red;
       text-align: left;
     }
+.column {
+  float: left;
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 8px;
+}
+
+.about-section {
+  padding: 50px;
+  text-align: left;
+  background-color: #474e5d;
+  color: white;
+}
+
+.about-section2 {
+  padding: 20px;
+  text-align: left;
+  margin-right: 800px;
+}
+
+.container {
+  padding: 0 16px;
+}
+
+.container::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.title {
+  color: grey;
+}
+
+
+/********************************* General *******************************/
+ulMain {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+/************** Footer *****************/
+
+ulFooter {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #474e5d;
+  color: white;
+}
+
+footer .copyright {
+	background: #474e5d;
+	border-top: 2px solid #1e2730;
+	padding: 0 16px;
+    color: white;
+}
