--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -37,7 +37,7 @@
                 <tr>
                     <td>Phone: </td>
                     <td><input type="tel" id="phone" name="phone"
-                               pattern="07[0-9]{8}"
+                               pattern="[0-9]{10}"
                                required th:field="*{userPhone}" /></td>
                 </tr>
                 <tr>
