flow: (register ->) login -> selectSport -> selectPlayGround -> selectBooking
time as String

--- a/src/main/resources/templates/confirmBooking.html
+++ b/src/main/resources/templates/confirmBooking.html
@@ -9,8 +9,7 @@
 
 
 <h2 class="confirmLogin-title" th:text="'Hello '+ ${name} + ','"></h2>
-<h2 class="confirmLogin-title" th:text="'Your login is successful' + '!'"></h2>
-<h2 class="confirmLogin-title" th:text="'Go to booking' + '!'"></h2>
+<h2 class="confirmLogin-title" th:text="'Your booking is successful' + '!'"></h2>
 
 </body>
 </html>
