--- a/src/main/resources/templates/selectBooking.html
+++ b/src/main/resources/templates/selectBooking.html
@@ -16,7 +16,7 @@
         </tr>
         <tr>
             <td>Time:</td>
-            <td><input type="time" min="09:00" max="18:00" step=3600 value="09:00" th:field="*{bookingHour}"/><small> Office hours are 9am to 6pm </small></td>
+            <td><input type="time" min="09:00" max="18:00" step=3600 value="09:00" th:field="*{{bookingHour}}"/><small> Office hours are 9am to 6pm </small></td>
         </tr>
         <tr>
             <td>Booking duration (h):</td>
