booking hour/duration/status to db

--- a/src/main/resources/templates/selectBooking.html
+++ b/src/main/resources/templates/selectBooking.html
@@ -20,7 +20,7 @@
         </tr>
         <tr>
             <td>Booking duration (h):</td>
-            <td><input type="int" th:field="*{bookingDuration}"/></td>
+            <td><input type="number" min=1 max=1 th:field="*{bookingDuration}"/></td>
         </tr>
         <tr>
             <td>
