booking can be done after login. userID is added to pages - debugging.

--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -17,6 +17,7 @@
     <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
     <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
 </ul>
+<p>User ID: [[${userID}]]</p>
 <div class="about-section">
     <h1>Sport Park Booking</h1>
     <p>Cea mai mare platformă din județul Cluj pentru rezervari online de terenuri de sport.</p>
