--- a/src/main/resources/templates/selectPlayGround.html
+++ b/src/main/resources/templates/selectPlayGround.html
@@ -1,20 +1,35 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
+
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <link href="../styles/styles.css" th:href="@{/styles/styles.css}" rel="stylesheet" />
     <title>Select PlayGround</title>
 </head>
 <body>
+<ul>
+    <li><a  href="/templates/home.html"     th:href="@{/home}"> Home</a></li>
+    <li><a  href="/templates/booking.html" th:href="@{/booking}"> Booking</a></li>
+    <li><a  href="/templates/login.html"    th:href="@{/login}"> Login</a></li>
+    <li><a  href="/templates/register.html" th:href="@{/register}"> Register</a></li>
+    <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
+    <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
+    <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
+</ul>
+<p>User ID: [[${userID}]]</p>
 
-<table style="border: 1px solid red">
-    <tbody>
-    <tr th:each="playGround: ${myPlayGroundList}">
-<!--        <td th:text="${playGround.getPlayGroundName}" />-->
-        <td> <a th:href="@{/selectBooking?playGroundName={id}(id=${playGround.getPlayGroundName})}" th:text="${playGround.getPlayGroundName}"/></td>
-    </tr>
-    </tbody>
-</table>
+<div class="myLeft">
+    <h1>Please select playground</h1>
+    <br><br>
 
+    <table style="border: 1px solid red">
+        <tbody>
+        <tr th:each="playGround: ${myPlayGroundList}">
+            <td> <a th:href="@{/selectBooking?playGroundID={id1}&userID={id2}(id1=${playGround.getPlayGroundID},id2=${userID})}" th:text="${playGround.getPlayGroundName}"/></td>
+        </tr>
+        </tbody>
+    </table>
+
+</div>
 </body>
 </html>
