see available hours

--- a/src/main/resources/templates/bookingNotAvailable.html
+++ b/src/main/resources/templates/bookingNotAvailable.html
@@ -21,7 +21,7 @@
 
 
 <h2 class="confirmLogin-title" th:text="'Hello '+ ${userName} + ','"></h2>
-<h2 class="confirmLogin-title" th:text="'The playground is already booked for the selected hour and date. Please select another booking!'"></h2>
+<h2 class="confirmLogin-title" th:text="'The playground is already booked for selected hours. Please select another booking!'"></h2>
 
 </body>
 </html>
