--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -20,5 +20,24 @@
         <div class="myCenter">
 
         </div>
+        <div class="row">
+            <div class="column">
+                <div class="card">
+                    <a href="galleryFotbal"><img src="/images/fotbal.jpg" alt="Fotbal" style="width:100%" height="600"></a>
+                    <div class="container">
+                        <h2><a href="galleryFotbal">Fotbal</a></h2>
+                    </div>
+                </div>
+            </div>
+
+            <div class="column">
+                <div class="card">
+                    <a href="galleryTenis"><img src="/images/tenis.jpg" alt="Tenis" style="width:100%" height="600"></a>
+                    <div class="container">
+                        <h2><a href="galleryTenis">Tenis</a></h2>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
