--- a/src/main/resources/templates/galleryFotbal.html
+++ b/src/main/resources/templates/galleryFotbal.html
@@ -21,17 +21,17 @@
 
         </div>
         <p><a href="/templates/gallery.html"  th:href="@{/gallery}"><button>Back to gallery</button></a></p>
-        <div class="row">
-            <div class="column">
-                    <img src="/images/Fotbal_1.jpg" alt="Fotbal_1" style="width:100%" height="400">
+        <div class="row" id="contentRow">
+            <div class="column" id="contentColumn1">
+                    <img src="/images/Fotbal_1.jpg" alt="Fotbal_1" >
                     <div class="container">
                         <h2>Teren 1</h2>
                         <p>Sus pe Feleac va oferim o oportunitate unică ! Fotbal în mijlocul naturii într-o locație deosebită !</p>
                     </div>
             </div>
 
-            <div class="column">
-                    <img src="/images/Fotbal_2.jpg" alt="Fotbal_2" style="width:100%" height="400">
+            <div class="column" id="contentColumn2">
+                    <img src="/images/Fotbal_2.jpg" alt="Fotbal_2" >
                     <div class="container">
                         <h2>Teren 2</h2>
                         <p>Pentru o combinație perfectă de sport + ieșire în natură vă recomandăm terenul numărul 2 !
@@ -39,24 +39,24 @@
                     </div>
             </div>
 
-            <div class="column">
-                    <img src="/images/Fotbal_3.jpg" alt="Fotbal_3" style="width:100%" height="400">>
+            <div class="column" id="contentColumn3">
+                    <img src="/images/Fotbal_3.jpg" alt="Fotbal_3">>
                     <div class="container">
                         <h2>Teren 3</h2>
                         <p>Situat pe drumul care leagă Cluj-Napoca de Turda acest teren vă oferă posibilitatea de a face sport într-un loc cu adevărat de vis !</p>
                     </div>
             </div>
 
-            <div class="column">
-                <img src="/images/Fotbal_4.jpg" alt="Fotbal_4" style="width:100%" height="400">>
+            <div class="column" id="contentColumn4">
+                <img src="/images/Fotbal_4.jpg" alt="Fotbal_4" >
                 <div class="container">
                     <h2>Teren 4</h2>
                     <p>Vă invităm să descoperiți noul nostru teren amenajat pe lacul Gheorgheni ! Rezervați din timp. Este una dintre cele mai cerute locații !</p>
                 </div>
             </div>
 
-            <div class="column">
-                <img src="/images/Fotbal_5.jpg" alt="Fotbal_5" style="width:100%" height="600">>
+            <div class="column" id="contentColumn5">
+                <img src="/images/Fotbal_5.jpg" alt="Fotbal_5" >
                 <div class="container">
                     <h2>Teren 5</h2>
                     <p>Cel mai nou teren pe care il punem la dispoziția clienților noștri este și cel mai spectaculos ! Situat în zona Florești acest teren beneficiază de încălzire subterană astfel
