--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -17,25 +17,22 @@
             <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
         </ul>
         <p>User ID: [[${userID}]]</p>
-        <div class="myCenter">
 
-        </div>
-        <div class="row">
+        <div class="row" id="contentRow">
             <div class="column">
-                <div class="card">
-                    <a href="galleryFotbal"><img src="/images/fotbal.jpg" alt="Fotbal" style="width:100%" height="600"></a>
-                    <div class="container">
-                        <h2><a href="galleryFotbal">Fotbal</a></h2>
-                    </div>
+                <a href="galleryFotbal" id="hrefContent1">
+                    <img src="/images/fotbal.jpg" alt="Fotbal">
+                </a>
+                <div class="container">
+                    <h2><a href="galleryFotbal" id="hrefContent3">Fotbal</a></h2>
                 </div>
             </div>
-
             <div class="column">
-                <div class="card">
-                    <a href="galleryTenis"><img src="/images/tenis.jpg" alt="Tenis" style="width:100%" height="600"></a>
-                    <div class="container">
-                        <h2><a href="galleryTenis">Tenis</a></h2>
-                    </div>
+                <a href="galleryTenis" id="hrefContent2">
+                    <img src="/images/tenis.jpg" alt="Tenis"  >
+                </a>
+                <div class="container">
+                    <h2><a href="galleryTenis" id="hrefContent4">Tenis</a></h2>
                 </div>
             </div>
         </div>
